<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectoryActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:drawerLayoutCornerSize="0dp"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/header" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider"
            android:divider="#000000"
            android:dividerHeight="2dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:hint="Name"
            android:imeOptions="actionDone"
            app:boxStrokeErrorColor="#0492C2"
            app:endIconDrawable="@drawable/baseline_filter_alt_24"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextColor="#1338BE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="1"
            app:startIconDrawable="@drawable/baseline_search_24">

            <EditText
                android:id="@+id/searchTextInput"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/results"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="Results (0)"
            android:textSize="27dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sortTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:hint="@string/select"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/searchTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout">

            <AutoCompleteTextView
                android:id="@+id/sortAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:padding="2dp"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="326dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dirErrText"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:textColor="#FF0000"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/searchTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/results" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="@id/searchTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/results"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>