...
                android:id="@+id/buildingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                tools:text="Building: "
                app:layout_constraintStart_toEndOf="@id/directoryProfilePic"
                app:layout_constraintTop_toBottomOf="@id/numberView"/>

            <TextView
                android:id="@+id/jobLevelView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                tools:text="Job Level: "
                app:layout_constraintStart_toEndOf="@id/directoryProfilePic"
                app:layout_constraintTop_toBottomOf="@id/buildingView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
